// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders NHSNotifyRadioButtonForm correctly with errors 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <h2
      class="nhsuk-heading-l"
    >
      Page heading
    </h2>
    <div
      class="nhsuk-form-group nhsuk-form-group--error"
    >
      <span
        class="nhsuk-error-message"
        id="radios-id-error-message"
      >
        <span
          class="nhsuk-u-visually-hidden"
        >
          Error: 
        </span>
        Field error
      </span>
      <div
        class="nhsuk-radios"
        id="radios-id"
      >
        <div
          class="nhsuk-radios__item"
        >
          <input
            aria-labelledby="radios-id-1--label"
            class="nhsuk-radios__input"
            data-testid="option-1-radio"
            id="radios-id-1"
            name="radios-id"
            type="radio"
            value="option-1"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="radios-id-1"
            id="radios-id-1--label"
          >
            option 1
          </label>
        </div>
        <div
          class="nhsuk-radios__item"
        >
          <input
            aria-labelledby="radios-id-2--label"
            class="nhsuk-radios__input"
            data-testid="option-2-radio"
            id="radios-id-2"
            name="radios-id"
            type="radio"
            value="option-2"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="radios-id-2"
            id="radios-id-2--label"
          >
            option 2
          </label>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm correctly without errors 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <h2
      class="nhsuk-heading-l"
    >
      Page heading
    </h2>
    <div
      class="nhsuk-form-group"
    >
      <div
        class="nhsuk-radios"
        id="radios-id"
      >
        <div
          class="nhsuk-radios__item"
        >
          <input
            aria-labelledby="radios-id-1--label"
            class="nhsuk-radios__input"
            data-testid="option-1-radio"
            id="radios-id-1"
            name="radios-id"
            type="radio"
            value="option-1"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="radios-id-1"
            id="radios-id-1--label"
          >
            option 1
          </label>
        </div>
        <div
          class="nhsuk-radios__item"
        >
          <input
            aria-labelledby="radios-id-2--label"
            class="nhsuk-radios__input"
            data-testid="option-2-radio"
            id="radios-id-2"
            name="radios-id"
            type="radio"
            value="option-2"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="radios-id-2"
            id="radios-id-2--label"
          >
            option 2
          </label>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;
